Add Backend Query

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 				<!-- Right navbar links -->
 
 			</nav>
+			
 			<!-- /.navbar -->
 
 			<!-- Main Sidebar Container -->
@@ -88,7 +89,7 @@
 
 
 							<li class="nav-item">
-								<a href="Pages/personanl.html" class="nav-link">
+								<a href="Pages/personanl.php" class="nav-link">
 									<i class="nav-icon fas fa-user-clock"></i>
 									<p>
 										Personal-Info
@@ -99,7 +100,7 @@
 							</li>
 
 							<li class="nav-item">
-								<a href="Pages/Education.html" class="nav-link">
+								<a href="Pages/Education.php" class="nav-link">
 									<i class="nav-icon fas fa-school"></i>
 									<p>
 										Education
@@ -110,7 +111,7 @@
 							</li>
 
 							<li class="nav-item">
-								<a href="Pages/Experance.html" class="nav-link">
+								<a href="Pages/Experance.php" class="nav-link">
 									<i class="nav-icon fas fa-tachometer-alt"></i>
 									<p>
 										Experiance
@@ -121,28 +122,14 @@
 							</li>
 
 							<li class="nav-item">
-								<a href="Pages/Skills.html" class="nav-link">
+								<a href="Pages/Skills.php" class="nav-link">
 									<i class="nav-icon fas fa-tools"></i>
 									<p>
 										Skills
 										<i class="right fas fa-angle-left"></i>
 									</p>
 								</a>
-								<ul class="nav nav-treeview">
-									<li class="nav-item">
-										<a href="Pages/softsills.html" class="nav-link">
-											<i class="far fa-circle nav-icon"></i>
-											<p>Soft-Sills</p>
-										</a>
-									</li>
-									<li class="nav-item">
-										<a href="Pages/tecskills.html" class="nav-link">
-											<i class="far fa-circle nav-icon"></i>
-											<p>Technical Skills</p>
-										</a>
-									</li>
-
-								</ul>
+								
 							</li>
 
 
